--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     socket.emit('player:move', '');
   }
 
-  var socket = io.connect('http://localhost');
+  var socket = io.connect();
 
   socket.on('game:state', function (data) {
     window.gameUpdated = true;
@@ -47,6 +47,15 @@
       gamePlayers[player.id].position.x = player.x;
       gamePlayers[player.id].position.y = 300 - player.y;
     });
+
+    // Check for Dead Sprites
+    if (gamePlayers) Object.keys(gamePlayers).forEach(function (id) {
+      var livePlayer = players.filter(function (p) { return p.id === id });
+      if (livePlayer.length) return;
+
+      stage.removeChild(gamePlayers[id]);
+      delete gamePlayers[id];
+    }.bind(this));
   }
 
   function animate () {
